# speq

./: Cargo.toml  LICENSE
speq/: Cargo.toml
speq-macros/: Cargo.toml
speq-macros/src/: axum.rs  derive.rs  lib.rs
speq/examples/: axum.rs
speq/src/: axum.rs  lib.rs  reflection.rs
