[package]
name = "speq-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
structmeta = "0.2"
serde_derive_internals = "0.27"

[dependencies.syn]
version = "2"
default-features = false

[features]
axum = []
