[package]
name = "speq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "axum"
required-features = ["axum", "axum_query"]

[dependencies]
http = "0.2"
inventory = "0.3"
speq-macros = { path = "../speq-macros" }

[dependencies.axum]
version = "0.6"
default-features = false
optional = true

[dependencies.camino]
version = "1"
optional = true

[dependencies.serde_qs]
version = "0.12"
optional = true

[features]
axum = ["dep:axum", "speq-macros/axum"]
axum_query = ["axum/query"]
camino = ["dep:camino"]
serde_qs_axum = ["serde_qs/axum"]

[dev-dependencies.axum]
version = "0.6"
features = ["http1"]

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.22"
features = ["macros"]
