[package]
name = "speq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "axum"
required-features = ["axum", "axum_query"]

[dependencies]
http = "1.2"
inventory = "0.3"
speq-macros = { path = "../speq-macros" }

[dependencies.axum]
version = "0.8"
default-features = false
optional = true

[dependencies.axum-extra]
version = "0.10"
default-features = false
optional = true

[dependencies.camino]
version = "1"
optional = true

[dependencies.serde_qs]
version = "0.13"
optional = true

[features]
axum = ["dep:axum", "speq-macros/axum"]
axum-json = ["axum", "axum/json"]
camino = ["dep:camino"]
serde_qs-axum = ["axum", "serde_qs/axum"]

axum-extra = ["axum", "dep:axum-extra"]
axum-extra-cookie = ["axum-extra", "axum-extra/cookie"]
axum-extra-cookie-private = ["axum-extra", "axum-extra/cookie-private"]

[dev-dependencies.axum]
version = "0.8"
features = ["http1"]

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.22"
features = ["macros"]
